Use css from server instead cdn; Fix path for css, js files;

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Wordpress SQL Generator</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
     <style>html,body{height:100%}textarea.form-control{font-size:14px}</style>
 </head>
 <body>
@@ -51,6 +51,6 @@
     </div>
 
 </div>
-<script src="js/common.min.js"></script>
+<script src="./js/common.min.js"></script>
 </body>
 </html>
