--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
                     <div class="col-sm-12 col-md-6">
                         <div class="form-group">
                             <label for="oldUrl">Old site URL</label>
-                            <input type="url" name="oldUrl" id="oldUrl" class="form-control" placeholder="Enter old site URL" value="http://oldurl.com" required>
+                            <input type="url" name="oldUrl" id="oldUrl" class="form-control" placeholder="Enter old site URL" value="http://joompress.biz" required>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-6">
                         <div class="form-group">
                             <label for="newUrl">New site URL</label>
-                            <input type="url" name="newUrl" id="newUrl" class="form-control" placeholder="Enter new site URL" value="https://newurl.com" required>
+                            <input type="url" name="newUrl" id="newUrl" class="form-control" placeholder="Enter new site URL" value="https://joompress.biz" required>
                         </div>
                     </div>
                 </div>
@@ -44,7 +44,7 @@
                 </div>
                 <div class="form-group">
                     <label for="output"><b>Generated SQL:</b></label>
-                    <textarea name="output" id="output" rows="5" class="form-control text-nowrap"></textarea>
+                    <textarea name="output" id="output" rows="7" class="form-control text-nowrap"></textarea>
                 </div>
             </form>
         </div>
